--- a/package.json
+++ b/package.json
@@ -9,11 +9,23 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@react-router/node": "^7.5.3",
+    "@shadcn/ui": "^0.0.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns-tz": "^3.2.0",
+    "framer-motion": "^12.12.1",
     "isbot": "^5.1.27",
+    "lucide-react": "^0.510.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-i18next": "^15.5.1",
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.6.0",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
@@ -23,6 +35,7 @@
     "@types/react-dom": "^19.1.2",
     "@vercel/react-router": "^1.1.0",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
