feat(itinerary): add itinerary management components and state
Add components for managing itinerary details, including activity cards, timeline, and checklist items. Implement Zustand store for state management and integrate with React Query for data fetching. Add support for weather, reminders, and document attachments.

The commit introduces new components and state management logic to handle itinerary data, including activity status updates and data synchronization between the UI and the store.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,30 @@
 
 # Vercel
 /.vercel/
+doc/Adress_NY.rtf
+doc/architecture.md
+doc/Billet_électronique_air.pdf
+doc/daily_ui.md
+doc/dashboard_analysis.md
+doc/data-setup.md
+doc/day-program-documentation.md
+doc/DayProgramPage.md
+doc/docmentation process .rtf
+doc/documentation.rtf
+doc/Gmail - Fwd_ Votre réservation a été confirmée.pdf
+doc/Icon
+doc/improved-trip-summary.md
+doc/logement.jpg
+doc/nashville.pdf
+doc/NY_nashville_Trip.pdf
+doc/NY_nashville.pdf
+doc/personal trip website plan.md
+doc/prompt.md
+doc/review1.md
+doc/tabel.md
+doc/ticket_application_summary.pdf
+doc/translation-setup.md
+doc/transportation_schedule.md
+doc/trip_summary.md
+doc/world_cup.rtf
+doc/Icon
