--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
+    "@react-google-maps/api": "^2.20.6",
     "@react-router/node": "^7.5.3",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.76.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.12.1",
     "isbot": "^5.1.27",
@@ -25,7 +30,8 @@
     "react-i18next": "^15.5.1",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.6.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
