--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
     "@react-google-maps/api": "^2.20.6",
@@ -23,9 +24,11 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.12.1",
+    "i18next": "^25.1.3",
     "isbot": "^5.1.27",
     "lucide-react": "^0.510.0",
     "react": "^19.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.1",
     "react-router": "^7.5.3",
