feat(itineraries): Add standardized itinerary data for June 25, 2025, including activities and metadata
docs: Create README for standardized itinerary data format and conversion process

chore(itinerary_analysis): Outline analysis plan for assessing itinerary quality and scoring criteria

style(itinerary_page): Plan redesign of itinerary page layout for improved user experience

chore(images): Add weather icons and default SVGs for weather representation

feat(temp): Introduce temporary itinerary data for June 19, 2025, with activities and metadata

refactor(tool): Implement itinerary analysis tool for scoring and validation against standardized schema

test(validation): Add validation script for checking standardized JSON files against schema

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@
 /.vercel/
 doc/*
 .env
+# Un-ignore the 'itineraires' directory, so Git can look inside it
+!doc/itineraires/
+
+# Un-ignore the 'standardized' directory itself
+!doc/itineraires/standardized/
+
+# Un-ignore all files and subdirectories within 'standardized'
+!doc/itineraires/standardized/**
