--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "npm install --legacy-peer-deps --force && react-router build",
+    "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "vercel-build": "npm install --legacy-peer-deps && react-router build"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.3.1",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -34,6 +36,7 @@
     "@tanstack/react-query": "^5.76.1",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "bufferutil": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -51,6 +54,7 @@
     "react-router": "^7.5.3",
     "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.3.0",
+    "utf-8-validate": "^6.0.5",
     "uuid": "^11.1.0",
     "zod": "^3.25.20",
     "zustand": "^5.0.4"
