--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,4 @@
 {
   "buildCommand": "npm run vercel-build",
-  "installCommand": "npm install --legacy-peer-deps",
-  "framework": null,
-  "outputDirectory": "build/client",
-  "functions": {
-    "api/index.js": {
-      "runtime": "nodejs20.x"
-    }
-  },
-  "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/api/index"
-    }
-  ]
+  "installCommand": "npm install --legacy-peer-deps"
 }
