--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc",
-    "vercel-build": "npm install --legacy-peer-deps && react-router build"
+    "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
