--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,18 @@
 {
-  "framework": "react-router"
+  "buildCommand": "npm run build",
+  "outputDirectory": "build/client",
+  "functions": {
+    "build/server/index.js": {
+      "runtime": "nodejs20.x"
+    }
+  },
+  "routes": [
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/build/server/index.js"
+    }
+  ]
 }
