--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,7 @@
 {
-  "buildCommand": "npm run build",
-  "framework": "remix",
-  "installCommand": "npm install",
-  "regions": ["iad1"],
   "functions": {
-    "app/entry.server.tsx": {
+    "build/server/nodejs_*/index.js": {
       "maxDuration": 30
     }
-  },
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  }
 }
